--- a/Software/Website/index.html
+++ b/Software/Website/index.html
@@ -5,6 +5,17 @@
     <link rel stylesheet="styles/custom.css"
   </head>
   <body>
+
+<h2>Add User</h2>
+
+<input id="name" placeholder="Name">
+<input id="email" placeholder="Email">
+<button onclick="addUser()">Add</button>
+
+<h3>Users:</h3>
+<ul id="userList"></ul>
+
+<script src="app.js"></script>
     
   </body>
 </html>
