--- a/Software/Website/index.html
+++ b/Software/Website/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-GB">
   <head>
-    <title></title>
-    <link rel stylesheet="styles/custom.css"
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
   </head>
   <body>
 
