--- a/Software/Website/index.html
+++ b/Software/Website/index.html
@@ -16,7 +16,7 @@
 <h3>Users:</h3>
 <ul id="userList"></ul>
 
-<script src="app.js"></script>
+<script src="Scripts/app.js"></script>
     
   </body>
 </html>
