--- a/Software/Website/index.html
+++ b/Software/Website/index.html
@@ -16,6 +16,9 @@
 <h3>Users:</h3>
 <ul id="userList"></ul>
 
+<div id="error"></div>
+<form id="userForm"></form>
+
 <script src="Scripts/app.js"></script>
     
   </body>
