--- a/Software/Website/index.html
+++ b/Software/Website/index.html
@@ -11,7 +11,7 @@
 
 <form id="userForm">
   <input id="name" placeholder="Name">
-  <input id="email" placeholder="Email">
+  <input id="email" placeholder="Email" type="email" required>
   <button id ="addButton" onclick="addUser()">Add</button>
 </form>
 
