--- a/Software/Website/index.html
+++ b/Software/Website/index.html
@@ -12,7 +12,7 @@
 <form id="userForm">
   <input id="name" placeholder="Name">
   <input id="email" placeholder="Email" type="email" required>
-  <button id ="addButton" onclick="addUser()">Add</button>
+  <button id ="addButton" type="submit">Add</button>
 </form>
 
 <p id="status"></p>p>
